Java 14 - Helpful NullPointerExceptions (JEP 358) examples